--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,9 +2,10 @@ fastapi==0.110.1
 uvicorn==0.25.0
 motor==3.3.1
 pydantic==2.6.4
-pydantic-settings==2.2.1  # For managing environment variables
+pydantic-settings==2.2.1
 python-dotenv>=1.0.1
 pymongo==4.5.0
-bcrypt==4.1.3              # For user auth later
-python-jose[cryptography]==3.3.0  # For JWT auth later
-python-multipart>=0.0.9    # For file uploads
+bcrypt==4.1.3
+python-jose[cryptography]==3.3.0
+python-multipart>=0.0.9
+razorpay==1.4.2
